...
            android:text="name"
            android:textStyle="normal"
            android:textSize="35dp"
            android:textColor="@color/colorSecondary" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_info_fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:layout_marginTop="220dp"
            android:src="@drawable/ic_star_border_white_24dp"></android.support.design.widget.FloatingActionButton>
    </android.support.v7.widget.CardView>
...
